# netvibe

./: .gitignore  LICENSE  README.md  database.py  main.py  netvibe  netvibe.db-shm  netvibe.db-wal  pyproject.toml  requirements.txt  setup.bat  setup.sh  setup_netvibe.py  setup_npcap.py  sniffer.py
src/netvibe/: __init__.py  cli.py  database.py  fastapi_app.py  installer.py  intelligence.py  local_ai.py  main.py  sniffer.py  style.css  web_app.py
src/netvibe/templates/: index.html
