[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netvibe"
version = "1.0.0"
description = "Web-based network monitor for AI service traffic"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "NetVibe Team", email = "team@netvibe.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]
keywords = ["network", "monitor", "ai", "traffic", "web", "streamlit"]
dependencies = [
    "scapy>=2.5.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
security = [
    "pip-audit>=2.6.0",
    "safety>=2.3.0",
]
web = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "streamlit-autorefresh>=1.0.0",
]

[project.scripts]
netvibe = "netvibe.cli:main"

[project.urls]
Homepage = "https://github.com/burmeseitman/netvibe"
Documentation = "https://github.com/burmeseitman/netvibe#readme"
Repository = "https://github.com/burmeseitman/netvibe.git"
Issues = "https://github.com/burmeseitman/netvibe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
netvibe = ["py.typed", "templates/*", "static/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]